# guap_y2_h2_op_l1

./: CMakeLists.txt  README.md
docs/: 4432Кз_ГиппиусКГ_ЛР1.docx
include/: chess_cell.hpp
src/: chess_cell.cpp  main.cpp
